# fluid-benchmarking

./: README.md  environment.yml  notices.txt  pyproject.toml
fluid_benchmarking/: config.py  datasets.py  engine.py  estimators.py  evaluation.py  indexing.py  rutils.py
irt/: fit_irt_model.py  two_param_logistic.py
notebooks/: demo.ipynb
scripts/: run_experiments.py
