[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-benchmarking"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Valentin Hofmann", email = "valentinh@allenai.org" }]

dependencies = [
  "huggingface_hub",
  "ipykernel",
  "numpy",
  "pandas",
  "scipy",
  "tabulate",
  "tqdm",
]

[project.optional-dependencies]
irt = [
  "py-irt",
]

[tool.setuptools.packages.find]
where = ["."]